option java_package = "tajo.rpc.test";
option java_outer_classname = "DummyProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message MulRequest1 {
	required int32 x1 = 1;
	required int32 x2 = 2;
}

message MulRequest2 {
	required int32 x1 = 1;
	required int32 x2 = 2;
}

message MulResponse {
	required int32 result1 = 1;
	required int32 result2 = 2;
}

message InnerNode {
	required string instr = 1;
}

message InnerRequest {
	repeated InnerNode nodes = 1;
}

message InnerResponse {
	repeated InnerNode nodes = 1;
}
